Se agregaron imagenes y se agregaron las columnas de productos y estilos de los mismos

--- a/inicio.html
+++ b/inicio.html
@@ -36,31 +36,49 @@
     </form>
   </div>
   <div class="column middle">
+    <h1 class="h1-titulo">Ofertas</h1>
     <table>
       <tr>
         <th>Producto</th>
         <th>Descripción</th>
         <th>Precio</th>
+        <th></th>
       </tr>
       <tr>
-        <td>Peter</td>
-        <td>Griffin</td>
+        <td><img class="img-producto" src="img/pava.jpg"></td>
+        <td>PAVA SILBADORA ACERO</td>
+        <td>$15</td>
+        <td><form>
+          <input class="input-cantidad" type="text" value="Cantidad"/>
+          <button class="button" type="button">Add Carrito</button>
+        </form></td>
+      </tr>
+      <tr>
+        <td><img class="img-producto" src="img/matero.jpg"></td>
+        <td>MATERO COLOR AZUL</td>
         <td>$100</td>
+        <td><form>
+          <input class="input-cantidad" type="text" value="Cantidad"/>
+          <button class="button" type="button">Add Carrito</button>
+        </form></td>
       </tr>
       <tr>
-        <td>Lois</td>
-        <td>Griffin</td>
+        <td><img class="img-producto" src="img/smartwatch.jpg"></td>
+        <td>Reloj Inteligente</td>
         <td>$150</td>
+        <td><form>
+          <input class="input-cantidad" type="text" value="Cantidad"/>
+          <button class="button" type="button">Add Carrito</button>
+        </form></td>
       </tr>
       <tr>
-        <td>Joe</td>
-        <td>Swanson</td>
-        <td>$300</td>
-      </tr>
-      <tr>
-        <td>Cleveland</td>
-        <td>Brown</td>
-        <td>$250</td>
+        <td><img class="img-producto" src="img/pen8.jpg"></td>
+        <td>Kingston DTGE9/8GB - Memoria USB de 8 GB</td>
+        <td>$50</td>
+        <td><form>
+          <input class="input-cantidad" type="text" value="Cantidad"/>
+          <button class="button" type="button">Add Carrito</button>
+        </form></td>
     </tr>
   </table>
 </div>
