Se cambio el logo, se agrego producto.html, se modifico estilos e inicio

--- a/productos.html
+++ b/productos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bazar Shop Paraguay</title>
+    <title>Productos-Bazar Shop Paraguay</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="css/estilo.css" rel="stylesheet">
 </head>
@@ -35,14 +35,15 @@
 
 <div class="row">
   <div class="column side">
-    <form id = "iniciarSesion" action="" method="POST">
-      <fieldset>
-        <legend>Iniciar Sesión:</legend>
-        Nombre Usuario: <input type="text"><br>
-        Password: <input type="password"><br>
-        <button  class="button" type = "submit" >Ingresar</button>
-      </fieldset>
-    </form>
+      <h1 class="h1-titulo">Categorias</h1>
+      <ul class="ul-a">
+        <li><a href="">Autos</a></li>
+        <li><a href="">Ferreteria</a></li>
+        <li><a href="">Cocina</a></li>
+        <li><a href="">Tecnologia</a></li>
+        <li><a href="">Muebles</a></li>
+        <li><a href="">Ropas</a></li>
+      </ul>
   </div>
   <div class="column middle">
     <h1 class="h1-titulo">Ofertas</h1>
@@ -51,43 +52,50 @@
         <th>Producto</th>
         <th>Descripción</th>
         <th>Precio</th>
-        <th></th>
+        <th>Stock</th>
+        <th>Acción</th>
       </tr>
       <tr>
         <td><img class="img-producto" src="img/pava.jpg"></td>
         <td>PAVA SILBADORA ACERO</td>
         <td>$15</td>
-        <td><form>
-          <input class="input-cantidad" type="text" value="Cantidad"/>
-          <button class="button" type="button">Add Carrito</button>
-        </form></td>
+        <td>
+          </p>NRO</p>
+        </td>
+        <td><button class="button" type="button">Editar</button>
+        <button class="button" type="button">Borrar</button>
+        </td>
       </tr>
       <tr>
         <td><img class="img-producto" src="img/matero.jpg"></td>
         <td>MATERO COLOR AZUL</td>
         <td>$100</td>
-        <td><form>
-          <input class="input-cantidad" type="text" value="Cantidad"/>
-          <button class="button" type="button">Add Carrito</button>
-        </form></td>
+        <td>
+        </p>NRO</p>
+        </td>
+        <td><button class="button" type="button">Editar</button>
+        <button class="button" type="button">Borrar</button>
+        </td>
       </tr>
       <tr>
         <td><img class="img-producto" src="img/smartwatch.jpg"></td>
         <td>Reloj Inteligente</td>
         <td>$150</td>
-        <td><form>
-          <input class="input-cantidad" type="text" value="Cantidad"/>
-          <button class="button" type="button">Add Carrito</button>
-        </form></td>
+        <td>
+          </p>NRO</p>
+        </td>
+        <td><button class="button" type="button">Editar</button>
+        <button class="button" type="button">Borrar</button>
+        </td>
       </tr>
       <tr>
         <td><img class="img-producto" src="img/pen8.jpg"></td>
         <td>Kingston DTGE9/8GB - Memoria USB de 8 GB</td>
         <td>$50</td>
-        <td><form>
-          <input class="input-cantidad" type="text" value="Cantidad"/>
-          <button class="button" type="button">Add Carrito</button>
-        </form></td>
+        <td></p>NRO</p></td>
+        <td><button class="button" type="button">Editar</button>
+        <button class="button" type="button">Borrar</button>
+        </td>
     </tr>
   </table>
 </div>
