Se puso funcionalidad al boton home y producto

--- a/inicio.html
+++ b/inicio.html
@@ -17,8 +17,8 @@
             <p></p>
             <div>
               <ul>
-                <li><a class="active" href="#">Inicio</a></li>
-                <li><a href="#">Producto</a></li>
+                <li><a class="active" href="inicio.html">Inicio</a></li>
+                <li><a href="productos.html">Producto</a></li>
                 <li><a href="#">La empresa</a></li>
                 <li style="float:right"><a href="#">Contactenos</a></li>
               </ul>
